--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=app.clase2.mediateca.AppMediateca
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
